@@ -1,3 +1,8 @@
+2017-05-01  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* tree.c (substitute_in_expr) <tcc_vl_exp>: Also inline a call if the
+	replacement expression is another instance of one of its arguments.
+
 2017-05-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/79430
